# mcu-slint-demo

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lamp.rs  main.rs  ui.rs
ui/: main.slint
